force-app/src/objects/CTCM__Direct_Debit_Filters__c.object
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <fields>
        <fullName>CTCM__AdditionalWhereclause__c</fullName>
        <inlineHelpText>Enter the additional WHERE clause you would like to assign to this filter. The where clause should be related to the transaction (c2g__codatransaction__c) object.
For example: &quot;c2g__Account__r.accountNumber != null&quot;</inlineHelpText>
        <label>Additional Where clause</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CTCM__Onlyinvoicesofaccountswithmandates__c</fullName>
        <defaultValue>true</defaultValue>
        <inlineHelpText>Check this box to only show Invoices of which the related account has a Direct Debit mandate.</inlineHelpText>
        <label>Only invoices of accounts with mandates</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>CTCM__Onlyinvoiceswithmandates__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Check this box to only show Invoices with a Direct Debit mandate.</inlineHelpText>
        <label>Only invoices with mandates</label>
        <type>Checkbox</type>
    </fields>
    <label>Direct Debit Filters</label>
</CustomObject>